# pfi

./: .dockerignore  .env  .gitignore  LICENSE  Makefile  README.md  architecture.md  attacker_model.keras  aws-deployment-scripts.md  convlstm_model.keras  convlstm_model_adversarial.keras  convlstm_model_ransomware_error.keras  convlstm_model_ransomware_final.keras  dataset_partition_report.txt  deployment_automatic.md  docker-compose.yml  dockerfile  evaluation_results_base.json  pyproject.toml  ransomware_feature_names.txt  requirements.txt  run_model.py  test.html  test2.html  visualizar_muestras.py
app/network-traffic-detection/: README.md
app/network-traffic-detection/src/: main.py
app/sensor/: .env  README.md  __init__.py  app.py  doc.md  env.example  install.sh  run.py  setup.py  test_client.py  test_sensor.py
app/sensor/configs/: sensor.yaml
app/sensor/examples/: usage_examples.md
app/sensor/model/: model.keras
app/sensor/src/: __init__.py  ai_model_processor.py  app.py  docs_setup.py  http_server.py  hybrid_server.py  main.py  model_service.py  raedme.md  sensor_server.py  tcp_traffic_capture.py  udp_server.py
dashboard/: index.html  package-lock.json  tailwind.config.js  vite.config.ts
dashboard/.storybook/: main.ts  preview.ts
dashboard/public/: site.webmanifest
dashboard/src/: main.ts
dashboard/src/components/: VuesticLogo.stories.ts  VuesticLogo.vue  va-timeline-item.vue
dashboard/src/data/: CountriesList.ts  types.ts
dashboard/src/i18n/: index.ts
dashboard/src/layouts/: AppLayout.vue  AuthLayout.vue
dashboard/src/pages/: 404.vue  Home.vue  UserVni.vue
dashboard/src/router/: index.ts
dashboard/src/services/: api.ts  auth.ts  toCSV.ts  user.ts  utils.ts
dashboard/src/stores/: billing-addresses.ts  global-store.ts  notifications.ts  payment-cards.ts  projects.ts  user-store.ts  users.ts
data/: flow_dataset.npz  pcap_to_csv.py  pcap_to_csv.small.py  pcap_to_csv_full.py  pcap_to_csv_small.py
docs/: ARQUITECTURA.md  GUIA_DEPLOY.md  RESEND_SETUP.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: DetectionCard.vue  DetectionTable.vue  StatsCards.vue
frontend/src/services/: api.js
models/: convlstm_model.backup.keras  convlstm_model.keras
models/data/: extract_7z_files.py  pcap_to_csv_full.py
models/training/: evaluation_results.json
models/training/adversarial-reinforcement/: 1_adversarial_reinforcement.py
models/training/detection/: 1_preprocesar_datos.py  2_dividir_datos_train_test.py  3_entrenar_modelo.py  3_entrenar_modelo_old.py  4_evaluar_modelo.py  5_visualizar_resultados.py  6_generar_evidencia.py  README_RANSOMWARE.md  attacker_model.keras  convlstm_model.keras  convlstm_model_best.keras  (+10 more)
scripts/: 00-run-all.sh  01-deploy-analizer.sh  02-push-sensor-image.sh  03-deploy-dashboard.sh  04-deploy-client.sh  05-send-traffic.sh  README_ACADEMY.md  analyze_pcap.py  build-and-push.sh  check_app_status.py  check_aws_status.py  check_malware_detections.py  clear_dynamo_table.py  clear_users_table.py  demo_detector.py  deploy-dashboard.sh  deploy.sh  dynamo_explorer.py  emulate_normal_traffic.sh  enable_demo.py  generate_api_docs.py  init_app.py  init_local_dynamo.py  minimal_test.py  network_sniffer.py  send_pcap_traffic.py  send_pcap_traffic.sh  setup_academy.sh  setup_academy_resources.sh  setup_aws_account.sh  setup_aws_records.py  show_dynamo.py  simple_sniffer.py  test_http_only.py  test_local_traffic.py  test_pcap_preload.py  test_sensor.sh  test_udp_server.py  test_udp_traffic.py  update_tfvars_from_existing.sh
scripts/deploy/: cleanup_account.sh  deploy-to-ecr.sh  deploy-to-ecs.sh  deployment_step_by_step.md  redeploy_app.sh  reset_complete.sh  setup_new_account.sh
terraform/: ARQUITECTURA.md  GUIA_DEPLOY.md  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  vpc_analizador.tf  vpc_cliente.tf
terraform/academy/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/analizer/: README.md  main.tf  provider.tf  tfplan  variables.tf
terraform/client/: README.md  main.tf  provider.tf  tfplan  variables.tf
terraform/env/: main.tf  terraform.tfvars  terraform.tfvars.backup  variables.tf  versions.tf
terraform/prod/: main.tf  outputs.tf  tfplan  variables.tf  vpc_analizador.tf  vpc_cliente.tf
terraform/split/: README.md
training/detection/: 1_preprocesar_datos.py  3_entrenar_modelo.py  3_entrenar_modelo_full.py
training/ofuscacion/: 1_ofuscar_datos.py  2_reentrenar_modelo.py
training/v1/: model_training.small.py  model_training_v1.py
training/v2/: 1_preprocesar_datos.py  2_dividir_datos_train_test.py  3_entrenar_modelo_full.py  3_entrenar_modelo_k_folds.py  3_entrenar_modelo_small.py  4_evaluar_modelo.py
(+191 files in other folders)
