[tool.poetry]
name = "ai-ransomware-detection"
version = "0.1.0"
description = "AI system for ransomware detection using network traffic analysis"
authors = ["Rodrigo <rodrigo@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# Núcleo científico
numpy = ">=1.24,<2.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
joblib = "^1.3.0"
tensorflow = "^2.12.0"
keras = "^2.12.0"

# Networking / IO / utilidades
scapy = "^2.5.0"
pyshark = "^0.6.0"
pyyaml = "^6.0"
pillow = "^10.0.0"
boto3 = "^1.34.0"
structlog = "^23.2.0"
click = "^8.1.0"
psutil = "^5.9.0"
pydantic = "^1.10.13"    # compatible con TF 2.12.x en Win
py7zr = "^0.20.0"
python-dotenv = "^1.1.1"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
poethepoet = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-model = "run_model:main"
sensor = "app.sensor.run:main"
demo = "demo_detector:main"

# -----------------------------
# TAREAS CROSS-PLATFORM (POE)
# -----------------------------
[tool.poe.tasks]
# 0) Setup específico por plataforma (sin WSL/bash)

# Actualiza pip en el venv de Poetry
pip-upgrade = "python -m pip install --upgrade pip"

# Windows / Linux: TensorFlow estable que no arrastra tf-io-gcs-filesystem
tf-win-install = "python -m pip install tensorflow==2.12.1 keras==2.12.0 typing-extensions==4.5.0"
tf-win.sequence = ["pip-upgrade", "tf-win-install"]

# macOS: TensorFlow macOS + Metal (opcional)
tf-mac-install = "python -m pip install tensorflow-macos==2.15.0 keras==2.15.0 tensorflow-metal>=1.1"
tf-mac.sequence = ["pip-upgrade", "tf-mac-install"]

# 1) Entorno
shell = "poetry shell"

# 2) Datos
extract = "python models/data/pcap_to_csv_full.py"
preprocess = "python models/training/detection/1_preprocesar_datos.py"
split-data = "python models/training/detection/2_dividir_datos_train_test.py"

# 3) Entrenamiento
train = "python models/training/detection/3_entrenar_modelo.py"
evaluate = "python models/training/detection/4_evaluar_modelo.py"
train-all.sequence = ["preprocess", "split-data", "train", "evaluate"]

# 4) Adversarial
obfuscate = "python models/training/ofuscacion/1_ofuscar_datos.py"
retrain-adversarial = "python models/training/ofuscacion/2_reentrenar_modelo.py"
evaluate-adversarial = "python models/training/ofuscacion/3_evaluar_modelo_adversarial.py"
train-adversarial-all.sequence = [
    "obfuscate",
    "retrain-adversarial",
    "evaluate-adversarial",
]

# 5) Apps / sensor
run-model = "python run_model.py"
sensor-help = "sensor --help"
sensor-live = "sensor --mode live"
sensor-pcap = "sensor --mode pcap"
# Nota: usa la var de entorno PCAP_FILE para pasar el path
sensor-pcap-threshold = "python -c \"import os,subprocess; subprocess.check_call(f'sensor --mode pcap --input {os.environ.get('PCAP_FILE','')} --threshold {os.environ.get('THRESHOLD','')}', shell=True)\""
demo = "python demo_detector.py --benign models/data/backup/Benign/Gmail.pcap --malicious models/data/backup/Malware/Zeus.pcap --delay 0"

# 6) Calidad
format = "black ."
lint = "flake8 ."
type-check = "mypy ."
test = "pytest"
check-all.sequence = ["format", "lint", "type-check", "test"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
